# NBAPredictor

./: .gitignore  README.md  requirements.txt
backend/: main.py  (+2 more)
data/: StatheadProcessor.cpp  automate.py  clean.py  load.py  pyproject.toml  sources.txt
data/2015/: boxScoreClean.csv  gamesRaw.csv  playersRaw.csv
data/2016/: boxScoreClean.csv  gamesRaw.csv
data/2017/: boxScoreClean.csv  gamesRaw.csv
data/2018/: boxScoreClean.csv  playersRaw.csv
data/2019/: boxScoreClean.csv  gamesRaw.csv  playersRaw.csv
data/2020/: boxScoreClean.csv  boxScoreRaw.csv  gamesRaw.csv
data/2021/: boxScoreClean.csv  gamesRaw.csv  playersRaw.csv
data/2022/: boxScoreClean.csv  gamesRaw.csv
data/2023/: boxScoreClean.csv  gamesRaw.csv
data/2024/: boxScoreClean.csv  playersRaw.csv
data/2025/: boxScoreClean.csv  boxScoreRaw.csv  gamesRaw.csv
data/processed/: 20222023_processed.csv  20232024_processed.csv  all_processed_data.csv
data/raw/2015/: boxScoreRaw.csv  gamesRaw.csv
data/raw/2016/: boxScoreRaw.csv  gamesRaw.csv  playersRaw.csv
data/raw/2017/: boxScoreRaw.csv  gamesRaw.csv  playersRaw.csv
data/raw/2018/: boxScoreRaw.csv  gamesRaw.csv
data/raw/2019/: boxScoreRaw.csv  gamesRaw.csv
data/raw/2020/: boxScoreRaw.csv  gamesRaw.csv  playersRaw.csv
data/raw/2021/: boxScoreRaw.csv  gamesRaw.csv
data/raw/2022/: boxScoreRaw.csv  gamesRaw.csv  playersRaw.csv
data/raw/2023/: boxScoreRaw.csv  gamesRaw.csv  playersRaw.csv
data/raw/2024/: boxScoreRaw.csv  gamesRaw.csv
data/raw/2025/: boxScoreRaw.csv  gamesRaw.csv  playersRaw.csv
data/shared/: teamsRaw.csv
(+90 files in other folders)
